--- a/src/Web/WebStatus/Dockerfile
+++ b/src/Web/WebStatus/Dockerfile
@@ -47,7 +47,7 @@ COPY "NuGet.config" "NuGet.config"
 # RUN dotnet restore "eShopOnContainers-ServicesAndWebApps.sln"
 COPY . .
 WORKDIR /src/Web/WebStatus
-RUN dotnet publish -c Release -o /app
+RUN dotnet publish --no-restore -c Release -o /app
 
 FROM build AS publish
 
